# quaternions

./: CMakeLists.txt  num_vector.hpp  operators.hpp  quaternion.hpp  run_tests.sh  tests.cpp
